<resources>
    <string name="app_name">AWE</string>
    <string name="beyond_smart_lighting">Beyond smart lighting</string>
    <string name="about_awe">About Awe</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="devices">Devices</string>
    <string name="rooms_zones">Rooms/Zones</string>
    <string name="rename_device">Rename Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="set_colour">Set colour</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="tip_edit_success">update success</string>
    <string name="tip_edit_failed">edit failed</string>
    <string name="tip_name_can_not_null">name cannot be null</string>
    <string name="tip_all_device_name_reminder">The name for all device names cannot be used as a single device name</string>
    <string name="scenes">Ambience</string>
    <string name="modes">Moods</string>
    <string name="colour">Colour</string>
    <string name="schedular">Schedular</string>
    <!--Scene-->
    <string name="scene_sleep">Sleep</string>
    <string name="scene_celebration">Celebration</string>
    <string name="scene_party">Party</string>
    <string name="scene_movie_time">Movie Time</string>
    <string name="scene_candle_light">Candle Light</string>
    <string name="scene_date_night">Date Light</string>
    <string name="scene_meditation">Meditation</string>
    <string name="scene_nature">Nature</string>
    <string name="scene_sunset">Sunset</string>
    <string name="scene_moonlight">Moonlight</string>
    <string name="scene_beach">Beach</string>
    <string name="scene_visual_alarm">Visual Alarm</string>
    <string name="intensity">Intensity</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <!--Modes-->
    <string name="relax">Relax</string>
    <string name="active">Active</string>
    <string name="wake_up">WakeUp</string>
    <string name="energise">Energise</string>
    <string name="reading_mode">Reading Mode</string>
    <string name="concentration">Concentration</string>
    <string name="alert">Alert</string>
    <!--Colour-->
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="magenta">Magenta</string>
    <string name="mauve">Mauve</string>
    <string name="teal">Teal</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_failed">add failed</string>
    <string name="rename_room">Rename Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="edit_room">Edit Room</string>
    <string name="repeat">Repeat</string>
    <string name="never_repeat">Never</string>
    <string name="every_day">EveryDay</string>
    <string name="work_day">WorkDay</string>
    <string name="custom">Custom</string>
    <string name="events">Events</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="breath_rainbow">Rainbow</string>
    <string name="breath_heartbeat">Heartbeat</string>
    <string name="breath_green">GreenBreath</string>
    <string name="breath_blue">BlueBreath</string>
    <string name="breath_alarm">Alarm</string>
    <string name="breath_twinkle">Flash</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tus">Tus</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="title">Title</string>

    <string name="custom_week">Custom</string>
    <string name="choose_event">Select Tasks</string>
    <string name="cannot_add_alarm_anymore">Cannot add alarm anymore</string>
    <string name="add_timing_success">Add Timing Success</string>
    <string name="add_timing_failed">Add Timing Failed</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="current_device">Current Device</string>
    <string name="not_added_device">Not Added</string>
    <string name="add">add</string>
    <string name="del">del</string>
    <string name="country_area">Country/Region</string>
    <string name="phone_email">phone / email</string>
    <string name="password">Password</string>
    <string name="start_login">Login</string>
    <string name="cant_create_network">Cannot create network</string>
    <string name="name_can_not_null">name cannot be empty</string>
    <string name="pls_input_account_pwd">please input account and password</string>
    <string name="login_failed">Login Failed</string>

    <string name="success_add_device">"Successfully add  device: "</string>
    <string name="done">Done</string>
    <string name="please_restart_ble">Please Restart the Bluetooth</string>
    <string name="find_device">Found Device</string>
    <string name="search">Searching Device</string>
    <string name="add_dev_fail">Failed to add device</string>
    <string name="cannot_add_any_device">sorry,you had 256 device,can not add anymore</string>
    <string name="ble_close">Bluetooth Closed</string>
    <string name="continue_add">Continue Add?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="remove_failed">Remove Failed</string>
    <string name="remove_success">Remove Success</string>
    <string name="about_awe_content"><b>Bajaj Awe: Beyond Smart Lighting – transform the lighting experience</b>\n\n
        Smart LED bulbs paired with mobile phones via Bluetooth and controlled by Bajaj Awe App. It can create Millions of colors with predefined color representation and/or functionalities, Human Centric Healthy lighting with pre-defined modes, Individual choices for user like celebration/ scheduler etc.\n\n
Bajaj Awe bulb is a 7W Led bulb and is one of the smart products in Bajaj’s increasing IoT portfolio. With a better lifespan it offers millions of colours (RGB and Dynamic white light appearance along with different intensity doses). It is compatible with devices running on Android and iOS. \n\n
        It provides customized lighting according to the user’s requirement. These bulbs allow the user to choose and control any color depending on the situation, time or mood by pairing the bulb with mobile App via Bluetooth. Preset controls are also provided for certain modes like reading, relaxing etc. that cover the colour spectrums addressing the healthy aspect of lighting. \n\n
        Powered by Bluetooth mesh topology, it can be retrofitted into an existing lamp holder (Buyonet Cap or Edission screw type) without the need for a hub or extra hardware. An intuitive and seamless system, Awe’s firmware is upgradeable and future-proof.
    </string>
    <string name="about_us_content"><b>“Enhancing quality of life and bringing happiness with sustainability”</b>\n\n
Bajaj Electricals Limited (BEL), a globally renowned and trusted company, with a turnaround of ₹4298 crores (FY 16-17), is a part of "Bajaj Group". Bajaj Electricals business is spread across – Consumer Products (Appliances, Fans, Lighting), Exports, Luminaires and EPC (Illumination, Transmission Towers and Power Distribution). Bajaj Electricals has 19 branch offices spread in different parts of the country besides being supported by a chain of distributors, authorized dealers, retail outlets, exclusive showrooms called ‘Bajaj World’ and approximately 462 customer care centers. We also have a presence in the hi-end range of appliances with brands like Platini and Morphy Richards in India.\n\n
Read more at https://www.bajajelectricals.com/
</string>
    <string name="support_content">In case of consumer complaint please contact\n\n
the Officer-in-Charge on : Tel. No. 022-24064400\n\n
or Email : <u>consumercare@bajajelectricals.com</u>\n\n
<u>https://www.facebook.com/BajajElectricals</u>\n\n
<u>https://twitter.com/BajajElectricals</u>
</string>
    <string name="scan_device">Scan Device</string>

    <string name="no_locate_permission">Location permission is not available</string>
    <string name="tip_no_locate_permission">The current user has denied the permission application and will not be able to continue without this permission</string>
    <string name="open_bluetooth">Open BlueTooth</string>
</resources>
