<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/rename_device"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:background="@color/white" />

    <EditText
        android:id="@+id/edt_edit_input"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_edit_input_bg"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="#999"
        android:textColorHint="#d2d2d2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Custom_Tips_Btn"
            android:text="@string/cancel" />

        <View
            android:layout_width="0.3dp"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Custom_Tips_Btn"
            android:text="@string/confirm" />

    </LinearLayout>


</LinearLayout>