<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="145dp"
    android:background="@drawable/dialog_edit_input_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/title"
        android:textColor="@color/text_333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/custom_dialog_tip_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_eee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:id="@+id/add_new_device_ok"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gary_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/grey_999"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_new_device_cancel"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_chamfer_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>