<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:orientation="vertical">

        <View
            android:id="@+id/view_status_bar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/rl_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_title_height"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:padding="7dp"
                android:src="@drawable/nav_bar_icon_menu" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size" />

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:padding="7dp"
                android:src="@drawable/nav_bar_icon_add_white" />
        </RelativeLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_title"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="2dp"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/white">

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>
    </LinearLayout>

    <!-- 左侧侧滑界面 -->
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="37dp"
            android:scaleType="center">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_menu_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_centerHorizontal="true"
                android:text="@string/beyond_smart_lighting"
                android:textColor="@color/text_333" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_menu_about_awe"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/about_awe"
            android:textColor="@color/text_333" />

        <TextView
            android:id="@+id/tv_menu_about_us"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textColor="@color/text_333" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/text_333" />

        <TextView
            android:id="@+id/tv_menu_support"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/text_333" />

        <TextView
            android:id="@+id/tv_menu_setting"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/text_333" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>